Improve information about the Website link

--- a/foilen-infra-resource-apachephp/src/main/resources/com/foilen/infra/resource/apachephp/messages_en.properties
+++ b/foilen-infra-resource-apachephp/src/main/resources/com/foilen/infra/resource/apachephp/messages_en.properties
@@ -3,6 +3,6 @@ ApachePhpEditor.name=Name
 ApachePhpEditor.basePath=Base Folder Path
 ApachePhpEditor.unixUser=Unix User
 ApachePhpEditor.machines=Installed on Machines
-ApachePhpEditor.websitesFrom=Websites
+ApachePhpEditor.websitesFrom=Websites that points to the generated application
 ApachePhpEditor.folders=Folders and Aliases
 ApachePhpEditor.attachableParts=Parts
