--- a/foilen-infra-resource-apachephp/src/main/resources/com/foilen/infra/resource/apachephp/messages_fr.properties
+++ b/foilen-infra-resource-apachephp/src/main/resources/com/foilen/infra/resource/apachephp/messages_fr.properties
@@ -3,6 +3,6 @@ ApachePhpEditor.name=Nom
 ApachePhpEditor.basePath=Répertoire de base
 ApachePhpEditor.unixUser=Utilisateur unix
 ApachePhpEditor.machines=Installé sur les machines
-ApachePhpEditor.websitesFrom=Sites web
+ApachePhpEditor.websitesFrom=Sites web qui pointent vers cette application
 ApachePhpEditor.folders=Répertoires et alias
 ApachePhpEditor.attachableParts=Parties
