Can use parent folders files

--- a/src/main/resources/com/foilen/infra/resource/apachephp/messages_en.properties
+++ b/src/main/resources/com/foilen/infra/resource/apachephp/messages_en.properties
@@ -1,8 +1,13 @@
 ApachePhpEditor.title=Apache and PHP
 ApachePhpEditor.name=Name
 ApachePhpEditor.basePath=Base Folder Path
+ApachePhpEditor.mainSiteRelativePath=Main Site Folder Path (relative to base folder) 
 ApachePhpEditor.unixUser=Unix User
 ApachePhpEditor.machines=Installed on Machines
 ApachePhpEditor.websitesFrom=Websites that points to the generated application
 ApachePhpEditor.folders=Folders and Aliases
 ApachePhpEditor.attachableParts=Parts
+ApachePhpFolderEditor.title=Apache and PHP Folder
+ApachePhpFolderEditor.basePath=Base Folder Path
+ApachePhpFolderEditor.relativePath=Alias's Folder Path (relative to base folder)
+ApachePhpFolderEditor.alias=The alias
