--- a/src/main/resources/com/foilen/infra/resource/apachephp/messages_fr.properties
+++ b/src/main/resources/com/foilen/infra/resource/apachephp/messages_fr.properties
@@ -1,8 +1,13 @@
 ApachePhpEditor.title=Apache et PHP
 ApachePhpEditor.name=Nom
 ApachePhpEditor.basePath=Répertoire de base
+ApachePhpEditor.mainSiteRelativePath=Répertoire du site principal (relatif au répertoire de base)
 ApachePhpEditor.unixUser=Utilisateur unix
 ApachePhpEditor.machines=Installé sur les machines
 ApachePhpEditor.websitesFrom=Sites web qui pointent vers cette application
 ApachePhpEditor.folders=Répertoires et alias
 ApachePhpEditor.attachableParts=Parties
+ApachePhpFolderEditor.title=Répertoire Apache et PHP
+ApachePhpFolderEditor.basePath=Répertoire de base
+ApachePhpFolderEditor.relativePath=Répertoire de l'alias (relatif au répertoire de base)
+ApachePhpFolderEditor.alias=Alias
