#3 Can select PHP version

--- a/src/main/resources/com/foilen/infra/resource/apachephp/messages_en.properties
+++ b/src/main/resources/com/foilen/infra/resource/apachephp/messages_en.properties
@@ -1,5 +1,6 @@
 ApachePhpEditor.title=Apache and PHP
 ApachePhpEditor.name=Name
+ApachePhpEditor.version=Version (<a href="https://hub.docker.com/r/foilen/fcloud-docker-apache_php/tags/" target="_blank">list here</a>)
 ApachePhpEditor.basePath=Base Folder Path
 ApachePhpEditor.mainSiteRelativePath=Main Site Folder Path (relative to base folder) 
 ApachePhpEditor.unixUser=Unix User
