--- a/src/main/resources/com/foilen/infra/resource/apachephp/messages_fr.properties
+++ b/src/main/resources/com/foilen/infra/resource/apachephp/messages_fr.properties
@@ -1,5 +1,6 @@
 ApachePhpEditor.title=Apache et PHP
 ApachePhpEditor.name=Nom
+ApachePhpEditor.version=Version (<a href="https://hub.docker.com/r/foilen/fcloud-docker-apache_php/tags/" target="_blank">liste ici</a>)
 ApachePhpEditor.basePath=Répertoire de base
 ApachePhpEditor.mainSiteRelativePath=Répertoire du site principal (relatif au répertoire de base)
 ApachePhpEditor.unixUser=Utilisateur unix
